integrated geotools 2.6.5